--- a/ai-wkt3/src/app/globals.css
+++ b/ai-wkt3/src/app/globals.css
@@ -80,7 +80,7 @@
 
 .dark {
   --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
+  --foreground: oklch(97.245% 0.00318 15.3);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.205 0 0);
